--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Starter kit for Craft CMS with gulp and webpack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dev.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,16 @@
   "bugs": {
     "url": "https://github.com/ScholtenSeb/craft-starter/issues"
   },
-  "homepage": "https://github.com/ScholtenSeb/craft-starter#readme"
+  "homepage": "https://github.com/ScholtenSeb/craft-starter#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "babel-core": "^5.8.34",
+    "babel-loader": "^5.4.0",
+    "browser-sync": "^2.10.0",
+    "gulp": "^3.9.0",
+    "http-proxy-middleware": "^0.9.0",
+    "webpack": "^1.12.9",
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-hot-middleware": "^2.5.1"
+  }
 }
