--- a/package.json
+++ b/package.json
@@ -30,7 +30,17 @@
     "babel-loader": "^5.4.0",
     "browser-sync": "^2.10.0",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-gzip": "^1.2.0",
+    "gulp-image": "^1.2.1",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-sass": "^2.1.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-webpack": "^1.5.0",
     "http-proxy-middleware": "^0.9.0",
+    "imagemin-pngquant": "^4.2.0",
     "webpack": "^1.12.9",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.5.1"
