--- a/package.json
+++ b/package.json
@@ -26,21 +26,31 @@
   "homepage": "https://github.com/ScholtenSeb/craft-starter#readme",
   "dependencies": {},
   "devDependencies": {
+    "autoprefixer": "^6.2.2",
     "babel-core": "^5.8.34",
     "babel-loader": "^5.4.0",
     "browser-sync": "^2.10.0",
+    "cssnano": "^3.4.0",
+    "cssnext": "^1.8.4",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.0.0",
+    "gulp-environments": "^0.1.1",
+    "gulp-flatten": "^0.2.0",
     "gulp-gzip": "^1.2.0",
     "gulp-image": "^1.2.1",
     "gulp-imagemin": "^2.4.0",
     "gulp-minify-css": "^1.2.1",
+    "gulp-postcss": "^6.0.1",
     "gulp-sass": "^2.1.0",
+    "gulp-size": "^2.0.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-webpack": "^1.5.0",
     "http-proxy-middleware": "^0.9.0",
     "imagemin-pngquant": "^4.2.0",
+    "postcss-scss": "^0.1.3",
+    "precss": "^1.3.0",
     "webpack": "^1.12.9",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.5.1"
