--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-core": "^5.8.34",
     "babel-loader": "^5.4.0",
     "browser-sync": "^2.10.0",
+    "bs-fullscreen-message": "^1.0.1",
     "cssnano": "^3.4.0",
     "cssnext": "^1.8.4",
     "gulp": "^3.9.0",
@@ -53,6 +54,7 @@
     "precss": "^1.3.0",
     "webpack": "^1.12.9",
     "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.5.1"
+    "webpack-hot-middleware": "^2.5.1",
+    "webpack-stream": "^3.1.0"
   }
 }
