--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Starter kit for Craft CMS with gulp and webpack",
   "main": "index.js",
   "scripts": {
-    "start": "node dev.js"
+    "start": "gulp"
   },
   "repository": {
     "type": "git",
@@ -31,8 +31,9 @@
     "babel-loader": "^5.4.0",
     "browser-sync": "^2.10.0",
     "bs-fullscreen-message": "^1.0.1",
+    "chalk": "^1.1.1",
     "cssnano": "^3.4.0",
-    "cssnext": "^1.8.4",
+    "eslint-config-airbnb": "^2.1.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
@@ -42,19 +43,26 @@
     "gulp-gzip": "^1.2.0",
     "gulp-image": "^1.2.1",
     "gulp-imagemin": "^2.4.0",
-    "gulp-minify-css": "^1.2.1",
+    "gulp-plumber": "^1.0.1",
     "gulp-postcss": "^6.0.1",
     "gulp-sass": "^2.1.0",
     "gulp-size": "^2.0.0",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-webpack": "^1.5.0",
+    "gulp-util": "^3.0.7",
     "http-proxy-middleware": "^0.9.0",
     "imagemin-pngquant": "^4.2.0",
+    "postcss-cssnext": "^2.3.0",
+    "postcss-import": "^7.1.3",
+    "postcss-reporter": "^1.3.0",
     "postcss-scss": "^0.1.3",
+    "postcss-short": "^1.4.0",
     "precss": "^1.3.0",
+    "rucksack-css": "^0.8.5",
+    "stylelint": "^3.2.0",
+    "stylelint-config-suitcss": "^2.0.0",
     "webpack": "^1.12.9",
     "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.5.1",
+    "webpack-nano-logs": "^1.0.0",
     "webpack-stream": "^3.1.0"
   }
 }
