--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Starter kit for Craft CMS with gulp and webpack",
   "main": "index.js",
   "scripts": {
-    "start": "gulp"
+    "start": "gulp --env development",
+    "build": "gulp build --env production"
   },
   "repository": {
     "type": "git",
@@ -14,7 +15,7 @@
     "craft",
     "gulp",
     "webpack",
-    "twig",
+    "browsersync",
     "php",
     "cms"
   ],
