--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
+language: node_js
+node_js:
+  - "5.4.0"
 install:
-  - npm install -g npm@2
-before_script:
-  - npm install
+  - npm install -g npm@3
   - npm install -g gulp
-script: gulp
+  - npm install
+script: npm start
