--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.0.0",
     "gulp-environments": "^0.1.1",
+    "gulp-eslint": "^1.1.1",
     "gulp-flatten": "^0.2.0",
     "gulp-gzip": "^1.2.0",
     "gulp-image": "^1.2.1",
