--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: node_js
 node_js:
   - "5.4.0"
 install:
-  - npm install -g npm@3
   - npm install -g gulp
   - npm install
-script: npm start
+script: gulp build
